2016-09-20  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Prepare and tag mingwrt-3.22.2 patch release.

	* configure.ac (AC_INIT): Increment patch level.
	* config.guess config.sub: Delete, per 2016-07-16 commit.
	* include/stdlib.h: Backport, per 2016-09-14 commit.
	* include/wchar.h: Backport, per 2016-09-17 commits.

2016-09-17  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Add missing <wchar.h> declarations when compiling C++.

	* include/wchar.h (fwide, mbsinit, wmemset, wmemchr, wmemcpy)
	(wmemmove, wcstoll, wcstoull): Declare each of these for either of...
	[_ISOC99_SOURCE || __cplusplus]: ...these conditions, rather than...
	[_ISOC99_SOURCE]: ...this alone.

2016-09-17  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Stricter <wchar.h> ISO-C99 conformity filtering.

	* include/wchar.h [__STRICT_ANSI__]: Do not include any part of...
	(direct.h, io.h, sys/stat.h, locale.h, process.h): ...any of these.

2016-09-14  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Relax strict ISO-C conformity to facilitate C99 support.

	* include/stdlib.h (_atoi64, _exit) [__STRICT_ANSI__]: Convention
	dictates that the Microsoft specific functions should not be declared;
	however, C99 provides equivalents in atoll() and _Exit(), for which we
	gratuituously use them to provide inline implementations; thus...
	[_ISOC99_SOURCE && !__NO_INLINE__]: ...declare them anyway.

2016-07-31  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Prepare and tag all files for release of mingwrt-3.22.1.

	* configure.ac (AC_INIT): Adjust package version number; append
	patch level identification.

2016-07-31  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Interim workaround for issue [#2306].

	* mingwex/math/powl.c: Tidy layout; correct indentation.
	(powl, reducl): Use ISO-C declaration syntax; K&R is obsolescent.
	(powl) [OVERFLOW]: Correct representation of return value, using...