@@ -1,3 +1,14 @@
+2016-10-13  Keith Marshall  <keithmarshall@users.sourceforge.net>
+
+	Resolve some non-ANSI typedef omissions.
+
+	* include/sys/types.h (off_t, ssize_t): Always typedef them when...
+	[_POSIX_C_SOURCE || !_NO_OLDNAMES]: ...either of these prevails.
+
+	* include/io.h (_fsize_t): Do not suppress its typedef when...
+	[__STRICT_ANSI__]: ...this compiler option applies, irrespective of...
+	[!(_IO_H && _WCHAR_H)]: ...this, which otherwise causes supression.
+
 2016-09-20  Keith Marshall  <keithmarshall@users.sourceforge.net>
 
 	Prepare and tag mingwrt-3.22.2 patch release.
